<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">収太郎</string>

    <!-- メニュー -->
    <string name="action_settings1">日付移動</string>
	<string name="action_settings2">総合データ</string>
	<string name="action_settings3">オプション</string>
	<string name="action_settings4">検索</string>
	<string name="action_settings5">ヘルプ</string>

    <string name="guidance_year">年</string>
    <string name="guidance_month"> 月</string>
    <string name="guidance_hour"> 時</string>
    <string name="guidance_minute"> 分</string>
    <string name="year_month_dialog_title">年月を設定します</string>
    <string name="guidance_calendar_view"> 日付を選択してください</string>
    <string name="button_set">設定</string>
    <string name="button_cancel">キャンセル</string>

    <string name="time_calendar_view">2017年3月10日</string>

	<string name="month_calendar_view">月間収支</string>
	<string name="year_calendar_view">年間収支</string>

	<string name="zero_calendar_view">100000</string>

	<string name="str_list_add_button">追加</string>
	<string name="str_add_list_title">収支入力</string>
	<string name="str_add_list_today">日付</string>
	<string name="str_add_list_number">台番</string>
	<string name="str_add_list_event">ｲﾍﾞﾝﾄ</string>
	<string name="str_add_list_event_hint">なし</string>
	<string name="str_add_list_jikyu">時給</string>
    <string name="str_add_list_time">時間</string>
	<string name="str_add_list_time_start">開始時刻</string>
    <string name="str_add_list_time_end">終了時刻</string>

	<string name="str_add_list_new_tenpo">店舗入力</string>
    <string name="str_add_list_new_kisyu">機種入力</string>
    <string name="str_add_list_new_event">イベント入力</string>
    <string name="str_add_list_new_number">台番入力</string>
    <string name="str_add_list_new_investment">投資入力</string>
    <string name="str_add_list_new_recovery">回収入力</string>

    <string name="str_add_list_exchange">交換率</string>

	<string name="str_com_investment">投資</string>
	<string name="str_com_recovery">回収</string>
	<string name="str_com_total">収支</string>
    <string name="str_com_syouhai">勝敗</string>
	<string name="str_com_memo">メモ</string>
    <string name="str_com_memo_dot">メモ：</string>

	<string name="str_com_sinvestment">総投資</string>
	<string name="str_com_srecovery">総回収</string>
	<string name="str_com_stotal">総収支</string>

    <string name="str_com_kisyu0">機種</string>
	<string name="str_com_kisyu">機種名</string>
	<string name="str_com_tenpo">店舗名</string>


	<string name="str_tenpo_hint">店舗未登録</string>
	<string name="str_kisyu_hint">機種未登録</string>

    <string name="dpre_total_syushi">累計収支</string>
    <string name="dpre_year_syushi">年別収支</string>
    <string name="dpre_month_syushi">月別収支</string>

    <string name="dpre_tenpo_syushi">店舗別収支</string>
    <string name="dpre_type_syushi">機種別収支</string>

    <string name="str_yen">円</string>
    <string name="str_ball">玉</string>
    <string name="str_medal">枚</string>
    <string name="str_pachi">パチンコ</string>
    <string name="str_slot">スロット</string>
    <string name="str_pachi2">パチ</string>
    <string name="str_slot2">スロ</string>
    <string name="str_tag">タグ</string>
    
    
    <string name="str_description">description</string>
    <string name="str_no_data">no data</string>

    <!-- preference key -->
    <string name="pref_key_tani">pref_key_tani</string>
    <string name="pref_key_seekbar">pref_key_seekbar</string>
    <string name="pref_key_seekbar_max">pref_key_seekbar_max</string>

    <string name="pref_key_destination">pref_key_destination</string>

    <!-- preference Category -->
    <string name="pref_category_01">収支設定</string>
	<string name="pref_category_02">バックアップ設定</string>

    <!-- preference title -->
    <string name="pref_title_01">＋－単位</string>
    <string name="pref_title_02">スライダー単位</string>
    <string name="pref_title_03">バックアップ</string>
    <string name="pref_title_04">復元</string>
    <string name="pref_title_05">スライダー最大値</string>

    <string name="pref_title_06">バックアップ作成先</string>

    <!-- preference summary -->
    <string name="pref_summary_01">単位を設定します</string>
    <string name="pref_summary_02">最大値を設定します</string>
    <string name="pref_summary_03">収支データのバックアップを作成します</string>
    <string name="pref_summary_04">バックアップから収支を復元します</string>

	<!-- webview -->
    <string name="msg_loading">読み込み中です。</string>

</resources>
