<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="jp.co.kaiwaredaikon320.syushi.MainActivity">

    <item
        android:id="@+id/overflow_options"
        android:showAsAction="ifRoom"
        android:title="Menu"
        android:icon="@drawable/ic_action_overflow">

        <menu>
		    <item
		        android:id="@+id/action_settings1"
		        android:orderInCategory="100"
		        android:showAsAction="never"
		        android:title="@string/action_settings2"/>
		    <item
		        android:id="@+id/action_settings2"
		        android:orderInCategory="200"
		        android:showAsAction="never"
		        android:title="@string/action_settings1"/>

		    <item
		        android:id="@+id/action_settings3"
		        android:orderInCategory="300"
		        android:showAsAction="never"
		        android:title="@string/action_settings3"/>
		    <item
		        android:id="@+id/action_settings4"
		        android:orderInCategory="400"
		        android:showAsAction="never"
		        android:title="@string/action_settings5"/>

		</menu>
    </item>
</menu>
