<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/input_list_linear"
    >

    
	<FrameLayout
	   android:layout_width="match_parent"
	   android:layout_height="24dp"
	>    
	    <!-- 機種名 -->
		<TextView
			android:id="@+id/input_typeText"
			android:layout_width="match_parent"
			android:layout_height="24dp"
			android:ems="10"
			android:gravity="start|center"
			android:text="@string/str_com_kisyu"
            android:background="@color/black"
			android:textColor="#ffffff"
			android:paddingLeft="10dp"
			android:textSize="16sp"
			android:maxLines="1"
			android:ellipsize="middle"
		/>

		<!-- 矢印 -->
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<ImageView
               android:id="@+id/arrow"
				android:layout_width="24dp"
				android:layout_height="32dp"
               android:layout_alignParentRight="true"
				android:layout_centerVertical="true"
				android:contentDescription="@string/str_description"
				android:paddingRight="5dp"
               android:scaleType="fitCenter"
				android:src="@android:drawable/ic_menu_more" />
       </RelativeLayout>


	</FrameLayout>
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
		android:gravity="start|center"
	    android:orientation="horizontal"
        android:background="@drawable/selector_list_view">

		<!-- 投資 -->
        <TextView
            android:id="@+id/input_image_investment"
            android:layout_width="48dp"
            android:layout_height="32dp"
            android:text="@string/str_com_investment"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="16sp"/>

		<TextView
			android:id="@+id/input_investmentNumber"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:ems="10"
			android:gravity="end|center"
			android:text="@string/zero_calendar_view"
			android:textColor="#000000"
			android:paddingTop="5dp"
			android:paddingBottom="5dp"
			android:paddingRight="5dp"
			android:paddingLeft="0dp"
			android:textSize="16sp"
			android:maxLines="1"
			android:ellipsize="middle"
		/>

		<!-- 回収 -->
        <TextView
            android:id="@+id/input_image_recovery"
            android:layout_width="48dp"
            android:layout_height="32dp"
            android:text="@string/str_com_recovery"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="16sp"/>

		<TextView
			android:id="@+id/input_recoveryNumber"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:ems="10"
			android:gravity="end|center"
			android:text="@string/zero_calendar_view"
			android:textColor="#000000"
			android:paddingTop="5dp"
			android:paddingBottom="5dp"
			android:paddingRight="5dp"
			android:paddingLeft="0dp"
			android:textSize="16sp"
			android:maxLines="1"
			android:ellipsize="middle"/>

		<!-- 収支 -->
        <TextView
            android:id="@+id/input_image_total"
            android:layout_width="48dp"
            android:layout_height="32dp"
            android:text="@string/str_com_total"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="16sp"/>

		<TextView
			android:id="@+id/input_totalNumber"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:ems="10"
			android:gravity="end|center"
			android:text="@string/zero_calendar_view"
			android:textColor="#000000"
			android:paddingTop="5dp"
			android:paddingBottom="5dp"
			android:paddingRight="5dp"
			android:paddingLeft="0dp"
			android:textSize="16sp"
			android:maxLines="1"
			android:ellipsize="middle"

		/>
	</LinearLayout>

</LinearLayout>
