<?xml version="1.0" encoding="utf-8"?>
    <!--
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/input_list_linear" >
    -->
    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_list_view"
            android:orientation="vertical" >

            <!-- 列1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start|center">
                <TextView
                    android:id="@+id/input_typeText_tenpo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:ems="10"
                    android:gravity="center"
                    android:text="@string/str_com_tenpo"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:singleLine="true"
                    android:ellipsize="end"
                />

                <!-- 投資 -->
                <TextView
                    android:id="@+id/input_investment_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/str_com_investment"
                    android:textColor="@color/black"
                    android:layout_weight="0.5"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/input_investmentNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="end|center"
                    android:text="@string/zero_calendar_view"
                    android:textColor="#000000"
                    android:paddingRight="5dp"
                    android:paddingLeft="0dp"
                    android:textSize="14dp"
                    android:singleLine="true"
                    android:ellipsize="end"
                />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

            </LinearLayout>

            <!-- 列2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end|center">
                <!-- 機種名 -->
                <TextView
                    android:id="@+id/input_typeText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:ems="10"
                    android:gravity="center"
                    android:text="@string/str_com_kisyu"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:singleLine="true"
                    android:ellipsize="end"
                />

                <!-- 回収 -->
                <TextView
                    android:id="@+id/input_recovery_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/str_com_recovery"
                    android:textColor="@color/black"
                    android:layout_weight="0.5"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/input_recoveryNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="end|center"
                    android:text="@string/zero_calendar_view"
                    android:textColor="#000000"
                    android:paddingRight="5dp"
                    android:paddingLeft="0dp"
                    android:textSize="14dp"
                    android:singleLine="true"
                    android:ellipsize="end"
                />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

            </LinearLayout>


            <!-- 列3 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- メモ -->
                <TextView
                    android:id="@+id/input_memo_image_01"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/str_com_memo_dot"
                    android:textColor="@color/black"
                    android:layout_weight="0.5"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/input_typeText_memo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ems="10"
                    android:gravity="start|center"
                    android:paddingLeft="5dp"
                    android:paddingRight="0dp"
                    android:text="@string/str_no_data"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:singleLine="true"
                    android:ellipsize="end"/>

                <!--収支-->
                <TextView
                    android:id="@+id/input_total_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/str_com_total"
                    android:textColor="@color/black"
                    android:layout_weight="0.5"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/input_totalNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="end|center"
                    android:text="@string/zero_calendar_view"
                    android:textColor="#000000"
                    android:paddingRight="5dp"
                    android:paddingLeft="0dp"
                    android:textSize="14dp"
                    android:singleLine="true"
                    android:ellipsize="end"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />

            </LinearLayout>

        </LinearLayout>

        <!-- 矢印 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <ImageView
                android:id="@+id/arrow"
                android:layout_width="24dp"
                android:layout_height="52dp"
                android:paddingRight="5dp"
                android:scaleType="fitCenter"
                android:src="@android:drawable/ic_menu_more"
                android:contentDescription="@string/str_description"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

    </FrameLayout>
