<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center"
        android:orientation="horizontal">
        <!--<TextView-->
            <!--android:id="@+id/dialog_text_view"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_marginLeft="10dip"-->
            <!--android:layout_marginRight="10dip"-->
            <!--android:text="@string/str_com_tenpo"-->
            <!--android:gravity="start"-->
            <!--android:textAppearance="?android:attr/textAppearanceLarge" />-->

        <EditText
            android:id="@+id/dialog_edit_tenpo_text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:scrollHorizontally="true"
            android:inputType="text"
            android:gravity="center|start"
            android:textColor="#000000"
            android:textSize="@dimen/add_text_size"/>
    </LinearLayout>

    <!--交換率-->
    <TextView
        android:id="@+id/dialog_text_view"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:text="@string/str_add_list_exchange"
        android:gravity="start"
        android:background="@color/header_background"
        android:textSize="@dimen/add_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/str_pachi2"
            android:gravity="end|center"
            android:textColor="@color/white"
            android:textSize="@dimen/add_text_size" />

        <EditText
            android:id="@+id/add_dialog_edit_01"
            android:layout_width="70dp"
            android:text="4.00"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:padding="5dp"
            android:ems="10"
            android:gravity="center|end"
            android:textColor="#000000"
            android:inputType="number"
            android:maxLength="5"
            android:textSize="@dimen/add_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_yen"
            android:gravity="start"
            android:textColor="@color/white"
            android:textSize="@dimen/add_text_size" />

        <TextView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/str_slot2"
            android:gravity="end|center"
            android:textColor="@color/white"
            android:textSize="@dimen/add_text_size" />

        <EditText
            android:id="@+id/add_dialog_edit_02"
            android:text="5.0"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:padding="5dp"
            android:ems="10"
            android:gravity="end|center"
            android:textColor="@color/black"
            android:inputType="number"
            android:maxLength="3"
            android:textSize="@dimen/add_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_yen"
            android:gravity="start"
            android:textColor="@color/white"
            android:textSize="@dimen/add_text_size" />
    </LinearLayout>


</LinearLayout>