<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/input_list_linear_btn">

    <!-- 項目 -->
	<TextView
	    android:id="@+id/data_item_text"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/black"
	    android:ems="10"
	    android:gravity="center"
	    android:text="@string/str_com_kisyu"
	    android:textColor="#ffffff"
	    android:textSize="16dp"
        android:maxLines="1"
		android:ellipsize="middle"
    />
     
     <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_list_view">

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp" >

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                    />

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/data_investmentText"
                            android:layout_width="74dp"
                            android:layout_height="20dp"
                            android:text="@string/str_com_investment"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"/>

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/data_investmentNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:ems="10"
                        android:gravity="end|center"
                        android:text="@string/zero_calendar_view"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:maxLines="1"
                        android:ellipsize="middle"/>

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                    />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp" >

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                    />

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/data_recoveryText"
                            android:layout_width="74dp"
                            android:layout_height="20dp"
                            android:text="@string/str_com_recovery"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"/>
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/data_recoveryNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:ems="10"
                        android:gravity="end|center"
                        android:text="@string/zero_calendar_view"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:maxLines="1"
                        android:ellipsize="middle"/>

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                    />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp" >

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                    />

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <TextView
                            android:id="@+id/data_totalText"
                            android:layout_width="74dp"
                            android:layout_height="20dp"
                            android:text="@string/str_com_total"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"/>
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/data_totalNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:ems="10"
                        android:gravity="end|center"
                        android:text="@string/zero_calendar_view"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:maxLines="1"
                        android:ellipsize="middle" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                    />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp" >

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        />

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <TextView
                            android:id="@+id/data_SyouhaiText"
                            android:layout_width="74dp"
                            android:layout_height="20dp"
                            android:text="@string/str_com_syouhai"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"/>
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/data_victory_defeat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:ems="10"
                        android:gravity="end|center"
                        android:text="○戦○勝○負○分"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:maxLines="1"
                        android:ellipsize="middle" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        />
                </TableRow>
			</TableLayout>	
			
			<!-- 勝敗 -->
<!--			<TextView
				android:id="@+id/data_victory_defeat"
				android:layout_width="match_parent"
			    android:layout_height="20dp"
				android:ems="10"
			    android:gravity="center"
				android:text="○戦○勝○負○分"
				android:background="@color/bg_color_white_alpha_cc"
				android:textColor="#000000"
			    android:textSize="16sp"
				android:maxLines="1"
				android:ellipsize="middle"/>-->
		</LinearLayout>
		
		
		<!-- 矢印 -->
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
			<RelativeLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" >
			    <ImageView
			        android:id="@+id/arrow"
			        android:layout_width="24dp"
			        android:layout_height="80dp"
                    android:src="@android:drawable/ic_menu_more"
			        android:contentDescription="@string/str_description"
			        android:scaleType="fitCenter"
					android:paddingRight="5dp"
					android:layout_centerVertical="true"
			        android:layout_alignParentRight="true"/>
			</RelativeLayout>	
		</LinearLayout>
		
	</FrameLayout>

</LinearLayout>

	
